--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.0",
+    "@vercel/analytics": "1.0.2",
     "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
     "esbuild": "^0.13.13",
